--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "victory": "^36.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
